--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
                         </div>
                         <div class="timeline-label">
                           <h2>
-                            <a href="#">Support specialist</a>
-                            <span>2019 - Present </span>
+                            <a href="#">Support specialist at Softech Foundation</a>
+                            <span>2020 - Present </span>
                           </h2>
                         </div>
                       </div>
@@ -636,7 +636,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
                         <div class="timeline-label">
                           <h2>
                             <a href="#">Field Visit Officer at Network Associates Pvt.Ltd.</a>
-                            <span>April 2019- Present</span>
+                            <span>April 2019- April 2020</span>
                           </h2>
                         </div>
                       </div>
